--- a/source/assets/scss/base/_tables.scss
+++ b/source/assets/scss/base/_tables.scss
@@ -7,13 +7,15 @@ table {
 }
 
 th {
-  border-bottom: 1px solid shade($base-border-color, 25%);
+//  border-bottom: 1px solid shade($base-border-color, 25%);
+  border: 1px solid #DCDBDB;
   font-weight: 600;
   padding: $small-spacing 0;
   text-align: left;
 }
 
 td {
+  border: 1px solid #DCDBDB;
   border-bottom: $base-border;
   padding: $small-spacing 0;
 }
