--- a/source/_includes/intro.html
+++ b/source/_includes/intro.html
@@ -1,6 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm <strong class="author-name" itemprop="name">{{ site.author.name }}</strong>, a <em itemprop="jobTitle">{{ site.author.job }}</em>. <br>
-    {{ site.author.bio }} -- <a href="{{ '/about' | prepend: site.author.url }}" target="_blank">about me</a></p>
+    {{ site.author.bio }} -- <a href="{{ '/about' | prepend: site.author.url }}" target="_blank">关于我</a></p>
   </div>
 </section>
