--- a/source/assets/scss/base/_lists.scss
+++ b/source/assets/scss/base/_lists.scss
@@ -1,8 +1,11 @@
 ul,
 ol {
-  list-style-type: none;
+//  list-style-type: none;
   margin: 0;
   padding: 0;
+  position: relative;
+  left: 30px;
+  margin-bottom: 20px;
 
   &%default-ul {
     list-style-type: disc;
@@ -28,4 +31,8 @@ dl {
   dd {
     margin: 0;
   }
+}
+
+tr td {
+  padding: 5px;
 }
