--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -59,7 +59,7 @@ hr {
   padding-bottom: .08em;
   border-bottom: 2px solid $light-gray-color;
 
-  @include transition(border 300ms linear);
+//  @include transition(border 300ms linear);
 
   &:hover,
   &:focus,
