--- a/assets/scss/base/_forms.scss
+++ b/assets/scss/base/_forms.scss
@@ -26,7 +26,7 @@ label {
   }
 }
 
-#{$all-text-inputs},
+// #{$all-text-inputs},
 select[multiple=multiple] {
   background-color: $base-background-color;
   border: $base-border;
