--- a/_includes/post-share.html
+++ b/_includes/post-share.html
@@ -1,9 +1,30 @@
 
 <aside class="share">
 
-  <h4>Share this.</h4>
-  <a href="http://twitter.com/share?text={{page.title}}&amp;url={{ site.url }}{{ page.url }}&amp;hashtags=web,dev,blog,soudev&amp;via=nandomoreirame"
-  onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">Twitter</a>
-  <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" onclick="window.open(this.href, 'facebook-share', 'width=550,height=235');return false;">Facebook</a>
+  <!-- JiaThis Button BEGIN -->
+  <div class="jiathis_style_32x32">
+  <a class="jiathis_button_tsina"></a>
+  <a class="jiathis_button_weixin"></a>
+  <a class="jiathis_button_fav"></a>
+  <a class="jiathis_button_digg"></a>
+  <a class="jiathis_button_twitter"></a>
+  <a class="jiathis_button_fb"></a>
+  <a class="jiathis_button_linkedin"></a>
+  <a class="jiathis_button_googleplus"></a>
+  <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
+  </div>
+  <script type="text/javascript" >
+  var jiathis_config={
+  	summary:"",
+  	ralateuid:{
+  		"tsina":"thesonghou"
+  	},
+  	shortUrl:true,
+  	hideMore:false
+  }
+  </script>
+  <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js" charset="utf-8"></script>
+  <!-- JiaThis Button END -->
+  
 
 </aside>
